--- a/Changes
+++ b/Changes
@@ -1,12 +1,11 @@
 Revision history for Excel-PowerPivot-Utils
 
 
-
+0.2      18.03.2023
   - refactored treatment of FormatInformation
-  - dropped EnableRefresh -- not relevant because it has to do with user interaction, not computation
   - fixed bug in inject_relationships
   - fixed POD bug
-
+  - new option: UTF8
 
 0.1      04.01.2023
   - initial release
